--- a/manifest.json
+++ b/manifest.json
@@ -12,50 +12,50 @@
     "theme_color": "#faa300",
     "icons": [
         {
-            "src": "./assets/amigo48.png",
+            "src": "./img/amigo48.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "./assets/amigo96.png",
+            "src": "./img/amigo96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "./assets/amigo144.png",
+            "src": "./img/amigo144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "./assets/amigo192.png",
+            "src": "./img/amigo192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "./assets/amigo256.png",
+            "src": "./img/amigo256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "./assets/amigo384.png",
+            "src": "./img/amigo384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "./assets/amigo512.png",
+            "src": "./img/amigo512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
     ],
     "screenshots": [
         {
-            "src":"./assets/screenshot1.png",
+            "src":"./img/screenshot1.png",
             "sizes": "367x652",
             "type": "image/png",
             "form_factor": "narrow"
         },
         {
-            "src":"./assets/screenshot2.png",
+            "src":"./img/screenshot2.png",
             "sizes": "942x667",
             "type": "image/png",
             "form_factor": "wide"
